crates/sdk-tests/tests/storage/singleton.stderr
error: a Template can have only a single `#[storage]`
 --> $DIR/singleton.rs:3:1
  |
3 | #[template]
  | ^^^^^^
  |
  = note: this error originates in the attribute macro `app` (in Nightly builds, run with -Z macro-backtrace for more info)
